# S3GTA

./: README.md
Hardware/: README.md
Hardware/s3gta_back/: s3gta_back.kicad_pcb  s3gta_back.kicad_prl  s3gta_back.kicad_pro  s3gta_back.kicad_sch
Hardware/s3gta_back/gerber/: s3gta_back-B_Cu.gbr  s3gta_back-B_Mask.gbr  s3gta_back-B_Paste.gbr  s3gta_back-B_Silkscreen.gbr  s3gta_back-Edge_Cuts.gbr  s3gta_back-F_Cu.gbr  s3gta_back-F_Mask.gbr  s3gta_back-F_Paste.gbr  s3gta_back-F_Silkscreen.gbr  s3gta_back-NPTH.drl  s3gta_back-PTH.drl  s3gta_back-job.gbrjob
Hardware/s3gta_panel/: fp-info-cache  s3gta_panel.kicad_pcb  s3gta_panel.kicad_prl  s3gta_panel.kicad_pro  s3gta_panel.kicad_sch
Hardware/s3gta_panel/gerber/: s3gta_panel-B_Cu.gbr  s3gta_panel-B_Mask.gbr  s3gta_panel-B_Paste.gbr  s3gta_panel-B_Silkscreen.gbr  s3gta_panel-Edge_Cuts.gbr  s3gta_panel-F_Cu.gbr  s3gta_panel-F_Mask.gbr  s3gta_panel-F_Paste.gbr  s3gta_panel-F_Silkscreen.gbr  s3gta_panel-NPTH.drl  s3gta_panel-PTH.drl  s3gta_panel-job.gbrjob
Software/: README.md  sdkconfig
Software/main/: CMakeLists.txt  audio.c  audio.h  dblfilter.h  eb_adc.c  eb_adc.h  eb_wm8731.c  eb_wm8731.h  fx.c  fx.h  fx_cdl.c  fx_filters.c  fx_filters.h  gc9a01_drvr.c  gc9a01_drvr.h  gfx.c  gfx.h  idf_component.yml  ifilter_mg4_v1.c  main.c  main.h  menu.c  multicore_audio.c  touch_ring.c  touch_ring.h  widgets.c  widgets.h
